# task/grpcHandler.go
@@ -8,64 +8,64 @@ import (
 )
 
 // Gibt den grpc ServiceServer zurück
-func GetServiceServer() task.TodoServiceServer {
+func GetServiceServer() task.TaskServiceServer {
 	var s taskServiceServer
 	return &s
 }
 
-// TodoServiceServer is used to implement task.TodoServiceServer.
+// taskServiceServer is used to implement task.taskServiceServer.
 type taskServiceServer struct {
 }
 
-func (s *taskServiceServer) CompleteTodo(ctx context.Context, req *task.GetTodoRequest) (*task.TodoEntity, error) {
-	item, err := completeTodoItem(req.Id)
-	entity := task.TodoEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
+func (s *taskServiceServer) CompleteTask(ctx context.Context, req *task.GetTaskRequest) (*task.TaskEntity, error) {
+	item, err := completeTaskItem(req.Id)
+	entity := task.TaskEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
 	return &entity, err
 }
 
-func (s *taskServiceServer) CreateTodo(ctx context.Context, req *task.CreateTodoRequest) (*task.TodoEntity, error) {
-	item, err := createTodoItem(req.Item)
-	entity := task.TodoEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
+func (s *taskServiceServer) CreateTask(ctx context.Context, req *task.CreateTaskRequest) (*task.TaskEntity, error) {
+	item, err := createTaskItem(req.Item)
+	entity := task.TaskEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
 	return &entity, err
 }
 
-func (s *taskServiceServer) DeleteTodo(ctx context.Context, req *task.DeleteTodoRequest) (*task.DeleteTodoResponse, error) {
-	err := deleteTodoItem(req.Id)
+func (s *taskServiceServer) DeleteTask(ctx context.Context, req *task.DeleteTaskRequest) (*task.DeleteTaskResponse, error) {
+	err := deleteTaskItem(req.Id)
 	if err != nil {
 		return nil, status.Errorf(codes.NotFound, "Could not retrieve entity from the database: %s", err)
 	}
 	return nil, nil
 }
 
-func (s *taskServiceServer) UpdateTodo(ctx context.Context, req *task.UpdateTodoRequest) (*task.TodoEntity, error) {
-	item, err := updateTodoItem(req.Id, req.Item)
+func (s *taskServiceServer) UpdateTask(ctx context.Context, req *task.UpdateTaskRequest) (*task.TaskEntity, error) {
+	item, err := updateTaskItem(req.Id, req.Item)
 	if err != nil {
 		return nil, status.Errorf(codes.NotFound, "Could not update entity: %s", err)
 	}
-	entity := task.TodoEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
+	entity := task.TaskEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
 	return &entity, nil
 }
 
-func (s *taskServiceServer) GetTodo(ctx context.Context, req *task.GetTodoRequest) (*task.TodoEntity, error) {
-	item, err := getTodoItem(req.Id)
+func (s *taskServiceServer) GetTask(ctx context.Context, req *task.GetTaskRequest) (*task.TaskEntity, error) {
+	item, err := getTaskItem(req.Id)
 	if err != nil {
-		return nil, status.Errorf(codes.NotFound, "Todo not Found: %s", err)
+		return nil, status.Errorf(codes.NotFound, "Task not Found: %s", err)
 	}
-	entity := task.TodoEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
+	entity := task.TaskEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
 	return &entity, nil
 }
 
-func (s *taskServiceServer) ListTodo(ctx context.Context, req *task.ListTodoRequest) (*task.TodoCollection, error) {
+func (s *taskServiceServer) ListTask(ctx context.Context, req *task.ListTaskRequest) (*task.TaskCollection, error) {
 
 	opts := GetListOptionsFromRequest(req)
-	items, dbMeta, err := listTodoItems(opts)
+	items, dbMeta, err := listTaskItems(opts)
 	if err != nil {
 		return nil, status.Errorf(codes.Unavailable, "Data Error: %s", err)
 	}
-	var collection []*task.TodoEntity
+	var collection []*task.TaskEntity
 	for _, item := range items {
-		entity := task.TodoEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
+		entity := task.TaskEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
 		collection = append(collection, &entity)
 	}
-	return &task.TodoCollection{Data: collection, Links: GenerateCollectionHATEOAS(dbMeta).Links}, nil
+	return &task.TaskCollection{Data: collection, Links: GenerateCollectionHATEOAS(dbMeta).Links}, nil
 }
